--- a/assets/css/basic.css
+++ b/assets/css/basic.css
@@ -6,6 +6,10 @@ html, body {
    font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+p {
+  font-family: inherit;
+}
+
 main {
    display: flex;
    justify-content: center;
@@ -16,7 +20,6 @@ main {
 }
 
 pre, code {
-   font-size: 1.2em;
    text-align: left;
 }
 
@@ -37,8 +40,17 @@ button.btn {
   padding: 2rem;
 }
 
+nav ul.navbar-nav {
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+li.nav-item {
+  margin: auto 10px;
+}
+
 @media screen and (max-width: 700px) {
    html, body {
-      font-size: 8px;
+      font-size: 10px;
    }
 }
